--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,14 @@
 <Files *.php>
 deny from all
 
+RewriteEngine On
+RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+RewriteBase /
+RewriteRule ^index\.php$ - [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /index.php [L]
+
 </Files>
  
 # END WordPress
